--- a/frontend/src/styles/AdminResourceAllocation.css
+++ b/frontend/src/styles/AdminResourceAllocation.css
@@ -113,7 +113,10 @@
   transition: background-color 0.3s;
   margin: 5px;
 }
-
+.a31b234567890
+{
+  background-color: rgb(20, 87, 55);
+}
 .a29b012345678:hover {
   background-color: #2980b9;
 }
@@ -121,6 +124,11 @@
 .a30b123456789:hover, .a31b234567890:hover {
   background-color: #2980b9;
 }
+.a31b234567890:hover {
+  background-color: #29b98e;
+
+}
+
 
 /* Disabled button */
 .a31b234567890:disabled {
