--- a/frontend/src/styles/AdminHome.css
+++ b/frontend/src/styles/AdminHome.css
@@ -5,6 +5,7 @@
   button {
     display: block;
     margin: 10px auto;
+    width: 100%;
     padding: 10px;
     background-color: blue;
     color: white;
